--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 /* CSS Document */
 
+
+
+
 body {
 	color: darkblue;
 	background-color:#3A9535;
@@ -27,6 +30,14 @@ dd {
 h1, h2, h3 {
 	margin-left: 300px;
 	align-content: center;
-	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, "sans-serif";
 	font-weight: bold;
+	font-family: 'Architects Daughter', cursive;
+}
+
+dt {
+	font-family: 'Architects Daughter', cursive;
+}
+
+h4 {
+	font-family: 'Berkshire Swash', cursive;
 }
