--- a/p2/homepage/css/homepagemockup.css
+++ b/p2/homepage/css/homepagemockup.css
@@ -33,8 +33,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	width: 1051px;
-	height: 981px;
+	background-color: beige;
 }
 ol, ul {
 	list-style: none;
@@ -54,29 +53,54 @@ table {
 
 
 
+
+
+#headertext {
+	width:1024px;
+	margin: 0 auto;
+}
+
 header {
 	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
 	font-weight: bold;
-	font-size: 2em;
-	color: #690A0B;
-	background-color:#D6B82E;
+	font-size: 1.5em;
+	color: #7C0A0C;
+	background-color:#FFCF00;
+	border-bottom:#000 solid medium;
 	padding-bottom: 18px;
+	width: 100%;
+	height:70px;
+}
+
+.rays {
+	padding-top:10px;
+	margin-bottom:5px;
+	font-size:1.2em;
+	margin-left:40px;
+}
+
+main {
+	width: 1024px;
+	margin: 0 auto;
+	background-color:beige;
+	overflow: hidden;
 }
 
 li {
 	display: inline;
-	margin-left: 25px;
-}
+	margin-left:195px;
+padding-right:10px;
+word-spacing: -5px;}
 
 #wrapper {
-	width: 1024px;
+	width: 100%;
 	height: 550px;
 	background-color: #F0EFEF;
 	margin: 0 auto;
 }
 
 footer {
-	width: 1024px;
+	width: 100%;
 	clear: both;
 	float: left;
 	padding-top: 15px;
@@ -94,7 +118,7 @@ h1 {
 }
 
 a {
-	margin-right: 59px;
+	margin-left: 10px;
 }
 
 .text {
@@ -191,4 +215,9 @@ header {
 	border-bottom:3px;
 	border-style: solid;
 	border-color:#232323
+}
+
+#raytext {
+align-content: center;
+	margin-left:20px;
 }
